# deepreader

./: .env.example  .gitignore  .python-version  PLAN.md  PRD.md  README-frontend.md  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  test_imports.py  写作流程性能分析.md  辩论机制详解.md
backend/: config.py  prompts-chapter.py  prompts.py  prompts_CHN.md  read_graph.py  read_state.py
backend/components/: README_md2pdf.md  google_llm.py  llm.py  md2pdf.py  md2pdf_example.py  token_counter.py  vector_store.py
backend/graph/actions/: docparsing_actions.py  rag_actions.py  reading_knowledge_actions.py  writing_actions.py
backend/graph/nodes/: IterativeReadingLoop.py  RAGPersistenceNode.py  ReportGenerationNode.py
backend/knowledge/: analyze_knowledge.md
backend/scraper/: README.md  clean_rule.py  epub_converter.py  mobi_converter.py  multipdf.py  pdf_converter.py  scraper_tools.py  tools.py  web_scraper.py
docs/: DeepReader_Architecture_Analysis.md  DeepReader_Architecture_Analysis_CN.md  Token限制问题修复说明.md  写作流程性能分析.md  章节顺序问题分析.md
frontend/: README.md  api_server.py  pyproject.toml.example  requirements.txt  run.bat  run.sh  start_server.py
frontend/static/: app.js  index.html
tests/: test_gemini_response_format.py
