[tool.poetry]
name = "finai-deepreader"
version = "0.1.0"
description = "A standalone component for deep, iterative reading and analysis of complex documents."
authors = ["luokunkirk"]
license = "MIT"
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

# Core LangChain and LangGraph dependencies
langgraph = "0.5.0"
langchain-core = "0.3.67"
langchain = "^0.3.26"
langchain-community = "^0.3.26"
langchain-text-splitters = "0.3.8"
langchain-openai = "0.3.27"
langgraph-checkpoint-sqlite = "2.0.10"
langsmith = "^0.4.4"

# Google AI dependencies
google-generativeai = "^0.8.5"
google-genai = "1.20.0"
langchain-google-genai = "^2.1.6"

# GPT Researcher
gpt-researcher = "0.14.0"

# Document processing
marker-pdf = "1.8.0"
ebooklib = "0.19"
mobi = "^0.3.3"
beautifulsoup4 = "4.13.4"
PyMuPDF = "^1.26.1"
python-docx = "^1.2.0"
unstructured = "^0.18.2"

# Web and API
fastapi = "0.115.14"
uvicorn = "0.35.0"
python-multipart = "0.0.20"
requests = "2.32.4"
aiohttp = "3.12.13"
aiofiles = "24.1.0"
httpx = "^0.28.1"

# Data processing
pydantic = "2.11.7"
numpy = "2.3.1"
faiss-cpu = "1.11.0"
SQLAlchemy = "^2.0.41"
aiosqlite = "^0.21.0"

# Text processing
thefuzz = "0.22.1"
json-repair = "0.47.6"
tiktoken = "^0.9.0"
jinja2 = "3.1.6"
markdown = "^3.8.2"
mistune = "^3.1.3"

# PDF generation
weasyprint = "^63.4"

# Machine Learning
torch = "^2.7.1"
transformers = "^4.53.0"
scikit-learn = "^1.7.0"
pillow = ">=10.1.0,<11.0.0"

# Utilities
python-dotenv = "1.1.1"
typing_extensions = "4.14.0"
tenacity = "^9.1.2"
tqdm = "^4.67.1"
colorama = "^0.4.6"
click = "^8.2.1"
rich = "^10.2.0"
prompt-toolkit = "^3.0.48"

# Additional dependencies for MCP and other features
langchain-mcp-adapters = "0.1.8"
websockets = "^15.0.1"
arxiv = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.0"
pytest-asyncio = "1.0.0"
pytest-dotenv = "^0.5.2"
types-aiofiles = "^24.1.0"
types-beautifulsoup4 = "^4.13.0"
types-colorama = "^0.4.15"
types-markdown = "^3.8.0"
types-requests = "^2.32.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "-v"
testpaths = ["test"]
python_files = "test_*.py"
asyncio_fixture_loop_scope = "function"

# Poetry configuration for handling dependency conflicts
[tool.poetry.group.optional.dependencies]
# Optional dependencies that might have conflicts
google-ai-generativelanguage = { version = "^0.6.15", optional = true }
surya-ocr = { version = "^0.14.6", optional = true }
